Bug 206788 - REGRESSION (r253634): cricbuzz.com media controls vanish depending on page scale
Summary: REGRESSION (r253634): cricbuzz.com media controls vanish depending on page scale
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-01-24 18:06 PST by Simon Fraser (smfr)
Modified: 2020-01-27 22:15 PST (History)
11 users (show)

See Also:


Attachments
Patch (15.61 KB, patch)
2020-01-24 18:11 PST, Simon Fraser (smfr)
no flags Details | Formatted Diff | Diff
Patch (24.35 KB, patch)
2020-01-27 16:11 PST, Simon Fraser (smfr)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2020-01-24 18:06:54 PST
REGRESSION (r253634): cricbuzz.com media controls vanish depending on page scale
Comment 1 Simon Fraser (smfr) 2020-01-24 18:11:09 PST
Created attachment 388752 [details]
Patch
Comment 2 Simon Fraser (smfr) 2020-01-24 18:11:11 PST
<rdar://problem/58780584>
Comment 3 Simon Fraser (smfr) 2020-01-24 18:12:38 PST
Need to write a test.
Comment 4 Simon Fraser (smfr) 2020-01-27 16:11:49 PST
Created attachment 388932 [details]
Patch
Comment 5 WebKit Commit Bot 2020-01-27 21:50:04 PST
The commit-queue encountered the following flaky tests while processing attachment 388932 [details]:

editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org)
The commit-queue is continuing to process your patch.
Comment 6 WebKit Commit Bot 2020-01-27 21:50:25 PST
The commit-queue encountered the following flaky tests while processing attachment 388932 [details]:

editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org)
The commit-queue is continuing to process your patch.
Comment 7 WebKit Commit Bot 2020-01-27 22:15:15 PST
Comment on attachment 388932 [details]
Patch

Clearing flags on attachment: 388932

Committed r255226: <https://trac.webkit.org/changeset/255226>
Comment 8 WebKit Commit Bot 2020-01-27 22:15:17 PST
All reviewed patches have been landed.  Closing bug.