Source/WebCore/rendering/RenderLayerCompositor.cpp
@@ -1908,8 +1908,7 @@ void RenderLayerCompositor::addToOverlapMap(LayerOverlapMap& overlapMap, const R
     auto clippedBounds = extent.bounds;
     if (!clipRect.isInfinite()) {
         // With delegated page scaling, pageScaleFactor() is not applied by RenderView, so we should not scale here.
-        auto& frameView = m_renderView.frameView();
-        if (!frameView.delegatesPageScaling())
+        if (!page().delegatesScaling())
             clipRect.scale(pageScaleFactor());
 
         clippedBounds.intersect(clipRect);
